[gd_scene load_steps=7 format=3 uid="uid://b87dkbqmbvfb5"]

[ext_resource type="PackedScene" uid="uid://jqshckbe3a4x" path="res://assets/furniture/Armchair.fbx" id="2_qkxsn"]
[ext_resource type="Script" path="res://levels/first_car/puzzle.gd" id="3_1fbn6"]

[sub_resource type="BoxShape3D" id="BoxShape3D_481pl"]
size = Vector3(6, 4, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cmx5b"]
albedo_color = Color(0, 1, 1, 1)
backlight = Color(1, 1, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1hkn8"]
albedo_color = Color(1, 0, 1, 1)
backlight = Color(1, 1, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gnnid"]
albedo_color = Color(1, 1, 0, 1)
backlight = Color(1, 1, 1, 1)

[node name="FirstCar" type="Node3D" groups=["train_car"]]

[node name="Furniture" type="Node3D" parent="."]

[node name="Armchair" parent="Furniture" instance=ExtResource("2_qkxsn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0.7, -8)

[node name="Armchair2" parent="Furniture" instance=ExtResource("2_qkxsn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0.7, -5)

[node name="Armchair3" parent="Furniture" instance=ExtResource("2_qkxsn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0.7, -1)

[node name="Armchair4" parent="Furniture" instance=ExtResource("2_qkxsn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0.7, 2)

[node name="Armchair5" parent="Furniture" instance=ExtResource("2_qkxsn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0.7, 5)

[node name="Armchair6" parent="Furniture" instance=ExtResource("2_qkxsn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0.7, 8)

[node name="Armchair7" parent="Furniture" instance=ExtResource("2_qkxsn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0.7, -8)

[node name="Armchair8" parent="Furniture" instance=ExtResource("2_qkxsn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0.7, -5)

[node name="Armchair9" parent="Furniture" instance=ExtResource("2_qkxsn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0.7, -1)

[node name="Armchair10" parent="Furniture" instance=ExtResource("2_qkxsn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0.7, 2)

[node name="Armchair11" parent="Furniture" instance=ExtResource("2_qkxsn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0.7, 5)

[node name="Armchair12" parent="Furniture" instance=ExtResource("2_qkxsn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0.7, 8)

[node name="Armchair13" parent="Furniture" instance=ExtResource("2_qkxsn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.7, -8)

[node name="Armchair14" parent="Furniture" instance=ExtResource("2_qkxsn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.7, -5)

[node name="Armchair15" parent="Furniture" instance=ExtResource("2_qkxsn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.7, -1)

[node name="Armchair16" parent="Furniture" instance=ExtResource("2_qkxsn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.7, 2)

[node name="Armchair17" parent="Furniture" instance=ExtResource("2_qkxsn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.7, 5)

[node name="Armchair18" parent="Furniture" instance=ExtResource("2_qkxsn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.7, 8)

[node name="Puzzle" type="Node3D" parent="."]
script = ExtResource("3_1fbn6")

[node name="Instructions" type="Label3D" parent="Puzzle"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.4, -12)
text = "Use Arrow Keys to Update"
font_size = 64

[node name="PuzzleArea" type="Area3D" parent="Puzzle"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -13)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Puzzle/PuzzleArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1.5, 2)
shape = SubResource("BoxShape3D_481pl")

[node name="Password" type="Node3D" parent="Puzzle"]

[node name="FirstNumber" type="CSGBox3D" parent="Puzzle/Password"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 2, -12.4)
cast_shadow = 0
size = Vector3(0.7, 1, 0.1)
material = SubResource("StandardMaterial3D_cmx5b")

[node name="Label3D" type="Label3D" parent="Puzzle/Password/FirstNumber"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.1)
outline_modulate = Color(1, 1, 1, 1)
text = "0"
font_size = 100

[node name="SecondNumber" type="CSGBox3D" parent="Puzzle/Password"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -12.4)
cast_shadow = 0
size = Vector3(0.7, 1, 0.1)
material = SubResource("StandardMaterial3D_1hkn8")

[node name="Label3D" type="Label3D" parent="Puzzle/Password/SecondNumber"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.1)
outline_modulate = Color(1, 1, 1, 1)
text = "0"
font_size = 100

[node name="ThirdNumber" type="CSGBox3D" parent="Puzzle/Password"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2, -12.4)
cast_shadow = 0
size = Vector3(0.7, 1, 0.1)
material = SubResource("StandardMaterial3D_gnnid")

[node name="Label3D" type="Label3D" parent="Puzzle/Password/ThirdNumber"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.1)
outline_modulate = Color(1, 1, 1, 1)
text = "0"
font_size = 100

[node name="Solution" type="Node3D" parent="Puzzle/Password"]

[node name="FirstNumber" type="Label3D" parent="Puzzle/Password/Solution"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -1.4, 1, -1.5)
modulate = Color(0, 1, 1, 1)
outline_modulate = Color(0, 1, 1, 0)
text = "6
"
font_size = 50

[node name="SecondNumber" type="Label3D" parent="Puzzle/Password/Solution"]
transform = Transform3D(-1, 8.74228e-08, 0, 3.82137e-15, 4.37114e-08, 1, 8.74228e-08, 1, -4.37114e-08, 0.6, 0.1, 10.5)
modulate = Color(1, 0, 1, 1)
outline_modulate = Color(0, 1, 1, 0)
text = "4
"
font_size = 160

[node name="ThirdNumber" type="Label3D" parent="Puzzle/Password/Solution"]
transform = Transform3D(1.31134e-07, -4.37114e-08, -1, 4.37114e-08, 1, -4.37114e-08, 1, -4.37114e-08, 1.31134e-07, 1.99, 2.1, 4.5)
modulate = Color(1, 1, 0, 1)
outline_modulate = Color(0, 1, 1, 0)
text = "8"
font_size = 180

[connection signal="body_entered" from="Puzzle/PuzzleArea" to="Puzzle" method="_on_puzzle_area_body_entered"]
[connection signal="body_exited" from="Puzzle/PuzzleArea" to="Puzzle" method="_on_puzzle_area_body_exited"]
